tests/lang/compile_fail/type_mismatch.kojs
fn add(a: Int, b: Int) -> Int
  a + b
end

add("hello", "world")
